GNOME Bugzilla – Bug 758404
Freebox Radios don't all appear
Last modified: 2018-05-24 18:38:01 UTC
The Freebox Radio plugin in grilo-plugins takes a radio list offered up by the Free.fr ISP's box, and offers them for streaming on the local network. Some radios will have the same URL with a different "audio-track", for example, as you can see in: https://git.gnome.org/browse/grilo-plugins/tree/src/freebox/radios.m3u "Europe 1" and "RMC Info" use the same URL but different audio track IDs (1001 vs. 1004). As rhythmbox only uses the URL as a unique identifier, those will be wrongly de-duplicated. To support those radios, rhythmbox will need to: - use a combination of source ID + media ID to uniquely identify each media across multiple sources - add support for the audio-track media property to pass onto GStreamer
I've also fixed the non-unique IDs in the freebox plugin, duh. commit 861415177cd6bd07dbfa9556c13cd8ada05596cc Author: Bastien Nocera <hadess@hadess.net> Date: Fri Nov 20 15:49:43 2015 +0100 freebox: Fix non-unique IDs for radios As we were using only the URL to differentiate media and that multiple radios have the same URL but different audio tracks, a lot of radios had the same ID. Fix this by using the audio track ID as well in the ID. See https://bugzilla.gnome.org/show_bug.cgi?id=758404
-- GitLab Migration Automatic Message -- This bug has been migrated to GNOME's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.gnome.org/GNOME/rhythmbox/issues/1430.