freebox: Fix non-unique IDs for radios

As we were using only the URL to differentiate media and that multiple
radios have the same URL but different audio tracks, a lot of radios had
the same ID. Fix this by using the audio track ID as well in the ID.

See https://bugzilla.gnome.org/show_bug.cgi?id=758404